<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/judul"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="00dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="00dp"
        android:contentDescription="@string/kertas_batu_gunting"
        android:src="@drawable/splash_screen1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivClose1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/close"
        android:contentDescription="@string/ivclose"
        app:layout_constraintEnd_toEndOf="@id/tvKomputer"
        app:layout_constraintTop_toTopOf="@id/judul" />

    <TextView
        android:id="@+id/tvPemain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:fontFamily="@font/tektonpro_boldcond"
        android:text="@string/pemain_1"
        android:textColor="@color/cyan"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvKomputer" />

    <ImageView
        android:id="@+id/ivBatu1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/pemain_1_memilih_batu"
        android:padding="5dp"
        android:src="@drawable/batu"
        app:layout_constraintStart_toStartOf="@id/tvPemain"
        app:layout_constraintTop_toTopOf="@id/ivBatu2" />

    <ImageView
        android:id="@+id/ivKertas1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/pemain_1_memilih_kertas"
        android:padding="5dp"
        android:src="@drawable/kertas"
        app:layout_constraintStart_toStartOf="@id/ivBatu1"
        app:layout_constraintTop_toTopOf="@id/ivKertas2" />

    <ImageView
        android:id="@+id/ivGunting1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/pemain_1_memilih_gunting"
        android:padding="5dp"
        android:src="@drawable/gunting"
        app:layout_constraintStart_toStartOf="@id/ivKertas1"
        app:layout_constraintTop_toTopOf="@id/ivGunting2" />

    <TextView
        android:id="@+id/tvKomputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16sp"
        android:fontFamily="@font/tektonpro_boldcond"
        android:text="@string/com"
        android:textColor="@color/cyan"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/ivBatu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/judul" />

    <ImageView
        android:id="@+id/ivBatu2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pemain_1_memilih_batu"
        android:padding="5dp"
        android:src="@drawable/batu"
        app:layout_constraintBottom_toTopOf="@+id/ivKertas2"
        app:layout_constraintEnd_toEndOf="@id/tvKomputer"
        app:layout_constraintTop_toBottomOf="@+id/tvKomputer" />

    <ImageView
        android:id="@+id/ivKertas2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pemain_1_memilih_kertas"
        android:padding="5dp"
        android:src="@drawable/kertas"
        app:layout_constraintBottom_toTopOf="@+id/ivGunting2"
        app:layout_constraintEnd_toEndOf="@id/ivBatu2"
        app:layout_constraintTop_toBottomOf="@+id/ivBatu2" />

    <ImageView
        android:id="@+id/ivGunting2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/pemain_1_memilih_gunting"
        android:padding="5dp"
        android:src="@drawable/gunting"
        app:layout_constraintBottom_toTopOf="@+id/ivReset"
        app:layout_constraintEnd_toEndOf="@id/ivKertas2"
        app:layout_constraintTop_toBottomOf="@+id/ivKertas2" />

    <TextView
        android:id="@+id/ivHasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/tektonpro_boldcond"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/vs"
        android:textColor="@color/redb"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@id/ivKertas2"
        app:layout_constraintEnd_toEndOf="@id/judul"
        app:layout_constraintStart_toStartOf="@id/judul"
        app:layout_constraintTop_toTopOf="@id/ivKertas1" />

    <ImageView
        android:id="@+id/ivReset"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/reset"
        android:src="@drawable/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivGunting2"
        app:layout_constraintTop_toBottomOf="@+id/ivGunting2" />

</androidx.constraintlayout.widget.ConstraintLayout>